add 1280 to main 1

--- a/main.html
+++ b/main.html
@@ -142,21 +142,24 @@
           </div>
         </div>
       </div>
-      <div class="top-[40%] xl:top-[35%] 3xl:top-[20%] lg:top-[38%] md:top-[32%] left-0 md:right-0 absolute z-[-1]">
+      <div class="top-[40%] xl:top-[39%] 2xl:top-[35%] lg:top-[38%] md:top-[32%] left-0 md:right-0 absolute z-[-1]">
          <img src="imges/Group-phone.svg" alt="" class="md:hidden">
          <img src="imges/Group-lap.svg" alt="" class="hidden md:flex xl:hidden w-[718px] h-[959px]">
-         <img src="imges/Group-desk.svg" alt="" class="hidden xl:flex w-[849.49px] h-[1265px]">
+         <img src="imges/Group-xl.svg" alt="" class="hidden xl:flex 2xl:hidden ">
+         <img src="imges/Group-desk.svg" alt="" class="hidden 2xl:flex w-[849.49px] h-[1265px]">
       </div>
       <div class="mb-28 xl:mb-96 mt-32 xl:mt-60">
-         <div class="flex justify-evenly mb-10">
+         <div class="flex justify-evenly 2xl:justify-evenly xl:justify-between mb-10">
             <img src="imges/rports_phone.svg" alt="" class="mt-[25%] w-[136px] h-[295px] md:hidden">
             <img src="imges/dashboard_phone.svg" alt="" class=" w-[136px] h-[295px] md:hidden">
             <img src="imges/reports_lap.svg" alt="" class="hidden xl:hidden md:mt-[25%] md:flex w-[300px] h-[439px] lg:w-[446px] lg:h-[585px]" style="box-shadow: 0px 2px 80px 0px rgba(37, 160, 213, 0.10);">
             <img src="imges/dash_lap.svg" alt="" class="hidden xl:hidden md:flex w-[300px] h-[439px] lg:w-[446px] lg:h-[585px]" style="box-shadow: 0px 2px 80px 0px rgba(37, 160, 213, 0.10);">
-            <img src="imges/Rectangle2222.svg" alt="" class="hidden xl:flex w-[918px] h-[618px] ml-14 md:mt-[16%]" style="box-shadow: 0px 2px 80px 0px rgba(37, 160, 213, 0.10);">
-            <img src="imges/dashboard.svg" alt="" class="hidden xl:flex w-[918px] h-[618px]" style="box-shadow: 0px 2px 80px 0px rgba(37, 160, 213, 0.10);">
+            <img src="imges/reports-xl.svg" alt="" class="hidden 2xl:hidden md:mt-[25%] xl:flex h-full" style="box-shadow: 0px 2px 80px 0px rgba(37, 160, 213, 0.10);">
+            <img src="imges/dash-xl.svg" alt="" class="hidden 2xl:hidden xl:flex h-full ml-16" style="box-shadow: 0px 2px 80px 0px rgba(37, 160, 213, 0.10);">
+            <img src="imges/Rectangle2222.svg" alt="" class="hidden 2xl:flex w-[918px] h-[618px] ml-14 md:mt-[16%]" style="box-shadow: 0px 2px 80px 0px rgba(37, 160, 213, 0.10);">
+            <img src="imges/dashboard.svg" alt="" class="hidden 2xl:flex w-[918px] h-[618px]" style="box-shadow: 0px 2px 80px 0px rgba(37, 160, 213, 0.10);">
          </div>
-      <div class="md:mr-[35%] lg:mr-[60%] md:mt-[-25%] lg:mt-[-20%] xl:mt-[-13%] md:mb-44">
+      <div class="md:mr-[35%] lg:mr-[60%] xl:mr-[45%] 2xl:mr-[60%] md:mt-[-25%] lg:mt-[-20%] xl:mt-[-23%] 2xl:mt-[-13%] md:mb-44">
         <h5 class="mb-8 text-center">يمكنك الأن معرفة حالة منشأتك</h5>
         <button class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 w-28 h-11 rounded-[10px] flex justify-center min-w-28 lg:w-max m-auto">انشاء تقارير</button>
       </div>
