add 1280 to main 2

--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
 
 <main class="relative top-[87px]">
     <section class="relative">
-      <div class="absolute left-0 z-[-1] top-[-15.5%] xl:top-[-15.5%] lg:top-[-46.5%] sm:top-[-73.5%] md:top-[-70.5%]" aria-hidden="true">
+      <div class="absolute left-0 z-[-1] top-[-15.5%] xl:top-[-40%] 2xl:top-[-15.5%] lg:top-[-46.5%] sm:top-[-73.5%] md:top-[-70.5%]" aria-hidden="true">
         <img src="imges/Group.svg" alt="">
       </div>
       <div class="m-auto px-4 sm:px-6">
@@ -63,8 +63,8 @@
               إلمام .. كُن مُلماً بمنشأتك
                <!-- <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400">wonderful</span> -->
             </h1>
-            <div class="max-w-3xl mx-auto">
-              <p class="text-lg xl:text-[32px] md:text-[26px] text-gray-600 mb-4 md:mb-7 xl:mb-8 aos-init aos-animate lg:text-3xl font-bold" data-aos="zoom-y-out" data-aos-delay="150">
+            <div class="max-w-3xl lg:max-w-5xl mx-auto">
+              <p class="text-lg lg:text-[26px] text-gray-600 mb-4 md:mb-7 xl:mb-8 aos-init aos-animate leading-8 lg:leading-10 font-bold" data-aos="zoom-y-out" data-aos-delay="150">
                 نظام تقني يعمل على تحليل بيانات المنشأة في  <span pan class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400 text-2xl	xl:text-[40px] md:text-[38px]">الجهات الحكومية</span>  وتقديم الإرشادات والتوجيهات بشكل مؤتمت لجعل المنشأة بأفضل مما هي عليه
               </p>
               <div class="inline-grid justify-items-center">
@@ -78,7 +78,7 @@
             </div>
           </div>
           <div class="relative z-0 flex justify-center w-auto">
-            <iframe src="https://www.youtube.com/embed/0VIdyvM4YI0" frameborder="0" class="w-[343px] h-[209px] sm:w-[620px] sm:h-[350px] lg:w-[810px] lg:h-[496px] xl:w-[1192px] xl:h-[730px]"></iframe>
+            <iframe src="https://www.youtube.com/embed/0VIdyvM4YI0" frameborder="0" class="w-[343px] h-[209px] sm:w-[620px] sm:h-[350px] lg:w-[810px] lg:h-[496px] 2xl:w-[1192px] 2xl:h-[730px]"></iframe>
           </div>
     </section>
     <section class="mt-20 md:md-48 xl:mt-44	">
