--- a/main.html
+++ b/main.html
@@ -81,25 +81,25 @@
             <iframe src="https://www.youtube.com/embed/0VIdyvM4YI0" frameborder="0" class="w-[343px] h-[209px] sm:w-[620px] sm:h-[350px] lg:w-[810px] lg:h-[496px] 2xl:w-[1192px] 2xl:h-[730px]"></iframe>
           </div>
     </section>
-    <section class="mt-20 md:md-48 xl:mt-44	">
-      <div class="mb-7 md:mb-12 xl:mb-16">
-        <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-3 sm:mb-10 aos-init aos-animate text-cyan-500">عن إلمام</h2>
-        <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl font-bold">تعريف عن الرؤية والاهداف</h3>
+    <section class="mt-20 md:md-48 xl:mt-32 2xl:mt-44	">
+      <div class="mb-7 md:mb-12 2xl:mb-16">
+        <h2 class="flex justify-center text-3xl 2xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-3 sm:mb-10 aos-init aos-animate text-cyan-500">عن إلمام</h2>
+        <h3 class="flex justify-center text-base md:text-[26px] 2xl:text-3xl font-bold">تعريف عن الرؤية والاهداف</h3>
       </div>
-      <div class="md:flex md:justify-center inline-grid gap-9 xl:gap-40">
-        <div class="w-[90%] h-full lg:w-[548px] m-auto lg:h-80 rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
+      <div class="md:flex md:justify-center inline-grid gap-9 xl:gap-12 2xl:gap-40">
+        <div class="w-[90%] h-full lg:w-[430px] 2xl:w-[548px] m-auto xl:m-0 2xl:m-auto lg:h-[260px] 2xl:h-80 rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
           <div class="flex justify-center mb-8">
             <img src="imges/eye.svg" alt="" class="ml-2.5 md:ml-5">
-            <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">الرؤية</h4>
+            <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] 2xl:text-3xl">الرؤية</h4>
           </div>
-          <p class="text-xs md:text-sm	xl:text-lg text-slate-500 px-10 leading-6 md:leading-8 xl:leading-[44px] pb-5 xl:pb-8 font-normal">تطمح إلمام أن تكون الشريك التقني للمنشآت في المملكة وذلك من خلال تقديم أفضل النصائح والإرشادات في العمليات الحكومية للمنشآت بشكل مؤتمت بالكامل مما يساعدها على اتخاذ أفضل القرارات والتقدم نحو النجاح.</p>
+          <p class="text-xs md:text-sm	2xl:text-lg text-slate-500 px-10 leading-6 md:leading-8 2xl:leading-[44px] pb-5 xl:pb-8 font-normal">تطمح إلمام أن تكون الشريك التقني للمنشآت في المملكة وذلك من خلال تقديم أفضل النصائح والإرشادات في العمليات الحكومية للمنشآت بشكل مؤتمت بالكامل مما يساعدها على اتخاذ أفضل القرارات والتقدم نحو النجاح.</p>
         </div>
-        <div class="w-[90%] h-full lg:w-[548px] lg:h-80 m-auto rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
+        <div class="w-[90%] h-full lg:w-[430px] 2xl:w-[548px] lg:h-[260px] 2xl:h-80 m-auto xl:m-0 2xl:m-auto rounded-xl" style="box-shadow: 0px 67.114px 109.061px 0px rgba(0, 0, 0, 0.05);">
           <div class="flex justify-center mb-8">
             <img src="imges/mission.svg" alt="" class="ml-2.5 md:ml-5">
-            <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">الهدف</h4>
+            <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] 2xl:text-3xl">الهدف</h4>
           </div>
-          <p class="text-xs md:text-sm	xl:text-lg text-slate-500 px-10 leading-6 md:leading-8 xl:leading-[44px] pb-5 xl:pb-8">تهدف إلمام الى مساعدة المنشآت وموظفيها في مجال العمليات الحكومية والموارد البشرية باكتشاف الأخطاء والملاحظات في العمليات الحكومية وحلها وتمكين المسؤولين من اتخاذ القرارات السليمة لجعل المنشأة في حال أفضل مما هي عليه.</p>
+          <p class="text-xs md:text-sm	2xl:text-lg text-slate-500 px-10 leading-6 md:leading-8 2xl:leading-[44px] pb-5 xl:pb-8">تهدف إلمام الى مساعدة المنشآت وموظفيها في مجال العمليات الحكومية والموارد البشرية باكتشاف الأخطاء والملاحظات في العمليات الحكومية وحلها وتمكين المسؤولين من اتخاذ القرارات السليمة لجعل المنشأة في حال أفضل مما هي عليه.</p>
         </div>
       </div>
     </section>
