add 1280 to main 4

--- a/main.html
+++ b/main.html
@@ -103,39 +103,39 @@
         </div>
       </div>
     </section>
-    <section class="mt-36 md:mt-40 xl:mt-60">
+    <section class="mt-36 md:mt-40 xl:mt-36 2xl:mt-60">
       <div class="flex flex-col mb-[-70px]">
-        <div class="mb-7 md:mb-12 xl:mb-16">
-          <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-3 sm:mb-10 aos-init aos-animate text-cyan-500">أهمية إلمام</h2>
-          <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
+        <div class="mb-7 md:mb-12 2xl:mb-16">
+          <h2 class="flex justify-center text-3xl 2xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-3 sm:mb-10 aos-init aos-animate text-cyan-500">أهمية إلمام</h2>
+          <h3 class="flex justify-center text-base md:text-[26px] 2xl:text-3xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
         </div>
-        <div class="md:flex md:justify-center inline-grid gap-5 xl:gap-16">
-          <div class="w-[252px] h-[230px] xl:w-[401px] md:mr-auto m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl bg-white">
+        <div class="md:flex md:justify-center inline-grid gap-5  2xl:gap-16">
+          <div class="w-[292px] h-[245px] 2xl:w-[476px] md:mr-auto m-auto xl:m-0 2xl:m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl bg-white">
             <div class="flex justify-start mb-10">
               <img src="imges/money-4.svg" alt="" class="ml-5 bg-[#E4F1F6] rounded-[10px] p-2">
-              <h4 class="mt-auto mb-auto font-bold text-xl md:text-[26px] xl:text-3xl">مخاطر مالية</h4>
+              <h4 class="mt-auto mb-auto font-bold text-xl md:text-[20px] 2xl:text-2xl">مخاطر مالية</h4>
             </div>
-            <p class="text-xs md:text-sm	xl:text-lg text-slate-500 leading-normal">
+            <p class="text-xs 2xl:text-base text-slate-500 leading-normal">
               - تجنب الهدر المالي بسبب عدم معرفة بعض الإجراءات الحكومية
               <br>
               - تجنب مخالفات تحدث نتيجة كثرة العمليات الحكومية وترابطها</p>
           </div>
-          <div class="w-[252px] h-[230px] xl:w-[401px] md:m-0 m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl bg-white">
+          <div class="w-[292px] h-[245px] 2xl:w-[476px] md:m-0 m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl bg-white">
             <div class="flex justify-start mb-10">
               <img src="imges/phone.svg" alt="" class="ml-5 bg-[#E4F1F6] rounded-[10px] p-2">
-              <h4 class="mt-auto mb-auto font-bold text-xl md:text-[26px] xl:text-3xl">مخاطر نظامية</h4>
+              <h4 class="mt-auto mb-auto font-bold text-xl md:text-[20px] 2xl:text-2xl">مخاطر نظامية</h4>
             </div>
-            <p class="text-xs md:text-sm	xl:text-lg text-slate-500 leading-normal">
+            <p class="text-xs 2xl:text-base text-slate-500 leading-normal">
               - تجنب المشاكل الناتجة عن التوطين الوهمي
               <br>
               - تجنب عدم الاستفادة من الدعم الحكومي للمنشأة</p>
           </div>
-          <div class="w-[252px] h-[230px] xl:w-[401px]  md:ml-auto m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl bg-white">
+          <div class="w-[292px] h-[245px] 2xl:w-[476px]  md:ml-auto m-auto xl:m-0 2xl:m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl bg-white">
             <div class="flex justify-start mb-10">
               <img src="imges/computer.svg" alt="" class="ml-5 bg-[#E4F1F6] rounded-[10px] p-2">
-              <h4 class="mt-auto mb-auto font-bold text-xl md:text-[26px] xl:text-3xl">مخاطر إدارية</h4>
+              <h4 class="mt-auto mb-auto font-bold text-xl md:text-[20px] 2xl:text-2xl">مخاطر إدارية</h4>
             </div>
-            <p class="text-xs md:text-sm	xl:text-lg text-slate-500 leading-normal">
+            <p class="text-xs 2xl:text-base text-slate-500 leading-normal">
               - تجنب عدم قدرة المسؤولين عن العمليات الحكومية على قيادة المنشأة
               <br>
               - تجنب عدم وجود تصور واضح للإدارة التنفيذية لاتخاذ القرارات السليمة</p>
