--- a/main.html
+++ b/main.html
@@ -142,7 +142,7 @@
           </div>
         </div>
       </div>
-      <div class="top-[40%] xl:top-[39%] 2xl:top-[35%] lg:top-[38%] md:top-[32%] left-0 md:right-0 absolute z-[-1]">
+      <div class="top-[40%] xl:top-[34%] 2xl:top-[35%] lg:top-[38%] md:top-[32%] left-0 md:right-0 absolute z-[-1]">
          <img src="imges/Group-phone.svg" alt="" class="md:hidden">
          <img src="imges/Group-lap.svg" alt="" class="hidden md:flex xl:hidden w-[718px] h-[959px]">
          <img src="imges/Group-xl.svg" alt="" class="hidden xl:flex 2xl:hidden ">
@@ -168,47 +168,47 @@
     <section class="relative mx-auto px-4 sm:px-6 bg-sky-500">
       <div class="py-12 md:py-20">
           <div class="max-w-3xl mx-auto text-center pb-12 md:pb-20">
-            <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter sm:mb-10 aos-init aos-animate text-white">أهمية إلمام</h2>
-            <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
+            <h2 class="flex justify-center text-3xl 2xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter sm:mb-10 aos-init aos-animate text-white">ماذا تقدم إلمام</h2>
+            <h3 class="flex justify-center text-base md:text-[26px] 2xl:text-3xl	font-bold">خدمات وميزات يمكن لمنشأتك الإستفادة منها عند الإشتراك مع إلمام</h3>
           </div>
-          <div class="max-w-sm mx-auto grid gap-4 md:gap-7 xl:gap-6 grid-cols-2 lg:grid-cols-4 items-start md:max-w-2xl lg:max-w-none font-bold">
+          <div class="max-w-sm mx-auto grid gap-4 md:gap-7 2xl:gap-6 grid-cols-2 lg:grid-cols-4 items-start md:max-w-2xl lg:max-w-[927px] 2xl:max-w-none font-bold">
               <!-- Card 1 -->
-              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] 2xl:max-w-[373px] md:m-auto">
                  <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">1</div>
                   <p class="text-center">تحسين نطاق المنشأة والمؤثرات عليه بأسهل الحلول وأقل التكاليف</p>
               </div>
               <!-- Card 2 -->
-              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] 2xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">2</div>
                   <p class="text-center">توافق المنشأة مع لوائح وبرامج توطين المهن</p>
               </div>
               <!-- Card 3 -->
-              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] 2xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">3</div>
                   <p class="text-center">نسب الجنسيات في المنشأة ومدى قدرتها على الاستقطاب</p>
               </div>
               <!-- Card 4 -->
-              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] 2xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">4</div>
                   <p class="text-center">كيفية حل المشكلات المانعة لخدمات نقل الكفالة والتأشيرات</p>
               </div>
               <!-- Card 5 -->
-              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] 2xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">5</div>
                   <p class="text-center">التنبيهات عن حالة دعم صندوق الموارد البشرية والمستحقين له</p>
               </div>
               <!-- Card 6 -->
-              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] 2xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">6</div>
                   <p class="text-center">بناء التصور المستقبلي لحالة المنشأة ومساعدة اصحاب القرار</p>
               </div>
               <!-- Card 7 -->
-              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] 2xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">7</div>
                   <p class="text-center">مساعدة الإدارة المالية لقياس تكلفة أثر المشكلات الكامنة</p>
               </div>
               <!-- Card 8 -->
-              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] 2xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">8</div>
                   <p class="text-center"> معرفة كفاءة موظفي أقسام العمليات الحكومية وتوجيههم</p>
               </div>
