--- a/main.html
+++ b/main.html
@@ -231,10 +231,10 @@
   >
   <div class="container mx-auto">
     <div class="mb-7 md:mb-12 xl:mb-16">
-      <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-3 sm:mb-10 aos-init aos-animate text-cyan-500">الأسئلة الشائعة</h2>
-      <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl font-bold">أسئلة وأجوبة عن موقع إلمام وكيفية استخدامه</h3>
+      <h2 class="flex justify-center text-3xl 2xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-3 sm:mb-10 aos-init aos-animate text-cyan-500">الأسئلة الشائعة</h2>
+      <h3 class="flex justify-center text-base md:text-[26px] 2xl:text-3xl font-bold">أسئلة وأجوبة عن موقع إلمام وكيفية استخدامه</h3>
     </div>
-     <div class="flex flex-wrap">
+     <div class="flex flex-wrap sm:w-[72%] sm:m-auto">
         <div class="w-full px-4 lg:w-1/2">
            <div
               class="w-full p-2 mb-8 md:mb-12 xl:mb-16 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
@@ -262,7 +262,7 @@
                  </div>
                  <div class="w-full">
                     <h4
-                       class="mt-1 text-sm md:text-lg	xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
+                       class="mt-1 text-sm md:text-lg	2xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
                        >
                        How long we deliver your first blog post?
                     </h4>
@@ -270,7 +270,7 @@
               </button>
               <div x-show="openFaq1" class="faq-content pr-5 border-t border-[#D9EBF3] text-right">
                  <p
-                    class="py-3 text-xs md:text-sm	xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
+                    class="py-3 text-xs md:text-sm	2xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
                     >
                     It takes 2-3 weeks to get your first blog post ready. That
                     includes the in-depth research & creation of your monthly
@@ -305,7 +305,7 @@
                  </div>
                  <div class="w-full">
                     <h4
-                       class="mt-1 text-sm md:text-lg	xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
+                       class="mt-1 text-sm md:text-lg	2xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
                        >
                        How long we deliver your first blog post?
                     </h4>
@@ -313,7 +313,7 @@
               </button>
               <div x-show="openFaq2" class="faq-content pr-5 border-t border-[#D9EBF3] text-right">
                  <p
-                    class="py-3 text-xs md:text-sm	xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
+                    class="py-3 text-xs md:text-sm	2xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
                     >
                     It takes 2-3 weeks to get your first blog post ready. That
                     includes the in-depth research & creation of your monthly
@@ -348,7 +348,7 @@
                  </div>
                  <div class="w-full">
                     <h4
-                       class="mt-1 text-sm md:text-lg	xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
+                       class="mt-1 text-sm md:text-lg	2xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
                        >
                        How long we deliver your first blog post?
                     </h4>
@@ -356,7 +356,7 @@
               </button>
               <div x-show="openFaq3" class="faq-content pr-5 border-t border-[#D9EBF3] text-right">
                  <p
-                    class="py-3 text-xs md:text-sm	xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
+                    class="py-3 text-xs md:text-sm	2xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
                     >
                     It takes 2-3 weeks to get your first blog post ready. That
                     includes the in-depth research & creation of your monthly
@@ -393,7 +393,7 @@
                  </div>
                  <div class="w-full">
                     <h4
-                       class="mt-1 text-sm md:text-lg	xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
+                       class="mt-1 text-sm md:text-lg	2xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
                        >
                        How long we deliver your first blog post?
                     </h4>
@@ -401,7 +401,7 @@
               </button>
               <div x-show="openFaq4" class="faq-content pr-5 border-t border-[#D9EBF3] text-right">
                  <p
-                    class="py-3 text-xs md:text-sm	xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
+                    class="py-3 text-xs md:text-sm	2xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
                     >
                     It takes 2-3 weeks to get your first blog post ready. That
                     includes the in-depth research & creation of your monthly
@@ -436,7 +436,7 @@
                  </div>
                  <div class="w-full">
                     <h4
-                       class="mt-1 text-sm md:text-lg	xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
+                       class="mt-1 text-sm md:text-lg	2xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
                        >
                        How long we deliver your first blog post?
                     </h4>
@@ -444,7 +444,7 @@
               </button>
               <div x-show="openFaq5" class="faq-content pr-5 border-t border-[#D9EBF3] text-right">
                  <p
-                    class="py-3 text-xs md:text-sm	xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
+                    class="py-3 text-xs md:text-sm	2xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
                     >
                     It takes 2-3 weeks to get your first blog post ready. That
                     includes the in-depth research & creation of your monthly
@@ -479,7 +479,7 @@
                  </div>
                  <div class="w-full">
                     <h4
-                       class="mt-1 text-sm md:text-lg	xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
+                       class="mt-1 text-sm md:text-lg	2xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
                        >
                        How long we deliver your first blog post?
                     </h4>
@@ -487,7 +487,7 @@
               </button>
               <div x-show="openFaq6" class="faq-content pr-5 border-t border-[#D9EBF3] text-right">
                  <p
-                    class="py-3 text-xs md:text-sm	xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
+                    class="py-3 text-xs md:text-sm	2xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
                     >
                     It takes 2-3 weeks to get your first blog post ready. That
                     includes the in-depth research & creation of your monthly
