add 1280 to main 7

--- a/main.html
+++ b/main.html
@@ -505,8 +505,8 @@
       <div class=" px-7 rounded-md bg-white">
 
     <div class="mb-16">
-      <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-3 sm:mb-10 aos-init aos-animate text-cyan-500">الدعم الفني</h2>
-      <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl font-bold">شاركنا مقتراحاتك وملاحظاتك.. او للمساعدة</h3>
+      <h2 class="flex justify-center text-3xl 2xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-3 sm:mb-10 aos-init aos-animate text-cyan-500">الدعم الفني</h2>
+      <h3 class="flex justify-center text-base md:text-[26px] 2xl:text-3xl font-bold">شاركنا مقتراحاتك وملاحظاتك.. او للمساعدة</h3>
     </div>
          <form class="font-bold" action="" method="POST">
 
