new Subscriptions page finished & edit the list on subscriptions page

--- a/new-subscriptons.html
+++ b/new-subscriptons.html
@@ -326,13 +326,21 @@
         <h2 class=" text-base xl:text-xl md:text-xl font-bold leading-tighter tracking-tighter aos-init aos-animate text-cyan-500">الإشتراكات</h2>
     </div>
         <div class="flex justify-right">
-            <div class=" mx-6  md:mr-12 rounded-2xl	bg-[#7FCAEA]  w-[433px] h-[126px] min-w-52 pt-3 pr-5 pb-2.5	pl-5 flex-col flex justify-center gap-1.5">
-                <h4 class="text-white text-xs md:text-sm	">تاريخ إنتهاء الاشتراك</h4>
-                <h1 class="text-white text-xs md:text-2xl	font-semibold	"style="font-family: Inter;">01/01/2025</h1>
-                <div class="w-full flex justify-end">
-                    <button class="rounded-lg	bg-white flex w-[110px] h-10	gap-1.5 text-[#D1D1D1] text-xs md:text-sm	justify-center	items-center		">
-                        تجديد الاشتراك
-                    </button>
+            <div class=" mx-6  md:mr-12 rounded-2xl	bg-[#7FCAEA] w-[433px] h-[126px] min-w-52 pt-3 pr-5 pb-2.5	pl-5 flex-col flex justify-center gap-1.5">
+                <div class="flex justify-between">
+                    <div >
+                        <h4 class="text-white text-xs md:text-sm">إشتراك لمدة سنة</h4>
+                        <h1 class="text-white text-base md:text-2xl	font-semibold mt-2.5	">ميزات غير محدودة</h1>
+                    </div>
+                    <div class=" ml-[15%] sm:ml-[20%]">
+                        <h4 class="text-white text-xs md:text-sm">مبلغ الإشتراك</h4>
+                        <h1 class="text-white text-xl md:text-2xl font-semibold mt-2.5	"style="font-family: Inter;"> 500 <span class="text-sm md:text-2xl ">ريال</span></h1>
+                    </div>
+                </div>
+                <div class="w-full flex justify-center">
+                    <button class="rounded-lg	bg-white flex w-[110px] h-10	gap-1.5  text-cyan-500 text-xs md:text-sm	justify-center	items-center		">
+إبدأ بالاشتراك
+           </button>
                 </div>
             </div>
         </div>
