peyment page finished

--- a/peyment.html
+++ b/peyment.html
@@ -332,19 +332,19 @@
 
 
 
-    <div class="p-8  flex flex-col w-[353px] lg:w-full xl:w-3/5 rounded-2xl	border border-[#D5D5D5]">
-                        <label class="mt-8 text-sm	 md:text-base leading-4 text-gray-800 dark:text-gray-50">الإسم على البطاقة</label>
-                        <div class="mt-2 flex-col">
-                            <div>
+    <div class="p-8  flex flex-col max-w-[633px] mx-auto rounded-2xl border border-[#D5D5D5]">
+        <div class="mt-2 mx-auto flex-col">
+                            <label class="mt-5 text-sm md:text-base leading-4 text-gray-800 dark:text-gray-50">الإسم على البطاقة</label>
+                            <div class="mb-4 mt-2">
                                 <input class="border rounded border-gray-300 p-4 w-full text-sm	 md:text-base leading-4 placeholder-gray-600 text-gray-600 rounded-2xl	border border-[#D5D5D5]" type="email" name="" id="" placeholder="الإسم على البطاقة" />
                             </div>
 
-                        <label class="mt-8 text-sm	 md:text-base leading-4 text-gray-800 dark:text-gray-50">معلومات الحساب</label>
+                        <label class="mt-32 text-sm	 md:text-base leading-4 text-gray-800 dark:text-gray-50">معلومات الحساب</label>
                         <div class="mt-2 flex-col">
                             <div>
-                                <input class="rounded-t-xl	 border   border-gray-300 p-4 w-full text-base leading-4 placeholder-gray-600 text-gray-600" type="email" name="" id="" placeholder="4225 9765 0008 6141" />
+                                <input class="rounded-t-xl border border-gray-300 p-4 w-full text-base leading-4 placeholder-gray-600 text-gray-600"  style="font-family: Inter;" type="email" name="" id="" placeholder="4225 9765 0008 6141 "  />
                             </div>
-                            <div class="flex-row flex">
+                            <div class="flex-row flex" style="font-family: Inter;">
                                 <input class="border rounded-bl border-gray-300 p-4 w-full text-base leading-4 placeholder-gray-600 text-gray-600" type="email" name="" id="" placeholder="MM/YY" />
                                 <input class="border rounded-br border-gray-300 p-4 w-full text-base leading-4 placeholder-gray-600 text-gray-600" type="email" name="" id="" placeholder="CVC" />
                             </div>
@@ -354,7 +354,7 @@
 
 
 
-            <div class="flex items-center lg:order-2">
+            <div class="flex mt-5 justify-center items-center lg:order-2">
                 <a href="#" class="text-white bg-cyan-500 lg:flex  hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-bold rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 w-44	  md:w-28 h-10	 md:h-11 rounded-[10px] flex justify-center min-w-28 lg:w-max">الاشتراك</a>
             </div>
                     </div>
@@ -362,9 +362,10 @@
             </div>
         </div>
     </div>
-
-
-
+<div class="text-center	">
+    <div class="flex gap-1 mt-5 justify-center text-xs md:text-sm xl:text-base"><h4 class="text-[#A3A3A3]">يتم التشغيل بواسطة </h4><h4 class="text-[#646464]">ميسر</h4></div>
+    <div class="text-red-900 mt-5 text-sm md:text-base xl:text-xl leading-4 leading-normal	"><h4>لن يتم حفظ بيانات بطاقتك</h4></div>
+</div>
 
 
 
