edit & finished  peyment page

--- a/peyment.html
+++ b/peyment.html
@@ -332,8 +332,8 @@
 
 
 
-    <div class="p-8  flex flex-col max-w-[633px] mx-auto rounded-2xl border border-[#D5D5D5]">
-        <div class="mt-2 mx-auto flex-col">
+    <div class="  flex flex-col max-w-[633px] mx-5 md:mx-auto rounded-2xl border border-[#D5D5D5]">
+        <div class="mt-2 mx-5 md:mx-auto flex-col">
                             <label class="mt-5 text-sm md:text-base leading-4 text-gray-800 dark:text-gray-50">الإسم على البطاقة</label>
                             <div class="mb-4 mt-2">
                                 <input class="border rounded border-gray-300 p-4 w-full text-sm	 md:text-base leading-4 placeholder-gray-600 text-gray-600 rounded-2xl	border border-[#D5D5D5]" type="email" name="" id="" placeholder="الإسم على البطاقة" />
@@ -345,8 +345,8 @@
                                 <input class="rounded-t-xl border border-gray-300 p-4 w-full text-base leading-4 placeholder-gray-600 text-gray-600"  style="font-family: Inter;" type="email" name="" id="" placeholder="4225 9765 0008 6141 "  />
                             </div>
                             <div class="flex-row flex" style="font-family: Inter;">
-                                <input class="border rounded-bl border-gray-300 p-4 w-full text-base leading-4 placeholder-gray-600 text-gray-600" type="email" name="" id="" placeholder="MM/YY" />
-                                <input class="border rounded-br border-gray-300 p-4 w-full text-base leading-4 placeholder-gray-600 text-gray-600" type="email" name="" id="" placeholder="CVC" />
+                                <input class="rounded-b-xl border rounded-bl border-gray-300 p-4 w-full text-base leading-4 placeholder-gray-600 text-gray-600" type="email" name="" id="" placeholder="MM/YY" />
+                                <input class="rounded-b-xl border rounded-br border-gray-300 p-4 w-full text-base leading-4 placeholder-gray-600 text-gray-600" type="email" name="" id="" placeholder="CVC" />
                             </div>
                         </div>
 
@@ -354,7 +354,7 @@
 
 
 
-            <div class="flex mt-5 justify-center items-center lg:order-2">
+            <div class="flex my-5 justify-center items-center lg:order-2">
                 <a href="#" class="text-white bg-cyan-500 lg:flex  hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-bold rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 w-44	  md:w-28 h-10	 md:h-11 rounded-[10px] flex justify-center min-w-28 lg:w-max">الاشتراك</a>
             </div>
                     </div>
