edit & finished  peyment page

--- a/peyment.html
+++ b/peyment.html
@@ -326,7 +326,7 @@
         <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline	"> الاشتراكات <h2 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline "> > </h2> <h4 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline "> الدفع</h4></h4>
     </div>
     <!-- /////////////////////// -->
-    <h3 class="text-center	text-[#25A0D5] mt-8	 mb-5	" >الدفع لإشتراك سنة</h3>
+    <h3 class="text-center text-[#25A0D5] mt-8 md:mt-[103px] xl:mt-[137px] mb-5 md:mb-7 xl:mb-10 text-base md:text-[26px] xl:text-3xl" >الدفع لإشتراك سنة</h3>
 
 
 
@@ -346,7 +346,7 @@
                             </div>
                             <div class="flex-row flex" style="font-family: Inter;">
                                 <input class="rounded-b-xl border rounded-bl border-gray-300 p-4 w-full text-base leading-4 placeholder-gray-600 text-gray-600" type="email" name="" id="" placeholder="MM/YY" />
-                                <input class="rounded-b-xl border rounded-br border-gray-300 p-4 w-full text-base leading-4 placeholder-gray-600 text-gray-600" type="email" name="" id="" placeholder="CVC" />
+                                <input class=" border rounded-br border-gray-300 p-4 w-full text-base leading-4 placeholder-gray-600 text-gray-600" type="email" name="" id="" placeholder="CVC" />
                             </div>
                         </div>
 
