finished coming soon bar

--- a/G-a-r-a-s-u.html
+++ b/G-a-r-a-s-u.html
@@ -365,7 +365,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: 14px; /* 175% */
-    ">تقرير يوضح نطاق المنشأة الحالي والمؤثرات عليه وكيفية تحسينه بأسهل الحلول الممكنة وأقل التكاليف.</p>
+    ">
+تقرير يوضح نطاق المنشأة الحالي والمؤثرات عليه وكيفية تحسينه بأسهل الحلول الممكنة وأقل التكاليف.</p>
     </div>
 
         <div class=" items-center gap-5 min-w-[138px] md:gap-8 max-w-[251px] h-[153px] md:h-[192px]  rounded-[20px] border border-[#E8E8E8] bg-white p-5	 " style="
@@ -414,7 +415,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: 14px; /* 175% */
-    ">تقرير يوضح نطاق المنشأة الحالي والمؤثرات عليه وكيفية تحسينه بأسهل الحلول الممكنة وأقل التكاليف.</p>
+    ">
+يوضح نسب الجنسيات في منشآت الرقم الموحد مما يتيح لصاحب العمل معرفة العدد الذي يمكن للمنشأة استقطابه من الجنسيات</p>
     </div>
 
         <div class=" items-center gap-5 min-w-[138px] md:gap-8 max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white p-5	 " style="
@@ -453,7 +455,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: 14px; /* 175% */
-    ">تقرير يوضح نطاق المنشأة الحالي والمؤثرات عليه وكيفية تحسينه بأسهل الحلول الممكنة وأقل التكاليف.</p>
+    ">
+تقرير يوضح المهن الموطنة في المنشأة ونسبها، وتقديم الإرشادات لتوافقها مع أنظمة ولوائح وزارة الموارد البشرية.
+</p>
     </div>
 
         <div class=" items-center gap-5 min-w-[138px] md:gap-8 max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white p-5	 " style="
@@ -495,7 +499,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: 14px; /* 175% */
-    ">تقرير يوضح نطاق المنشأة الحالي والمؤثرات عليه وكيفية تحسينه بأسهل الحلول الممكنة وأقل التكاليف.</p>
+    ">
+تمكن صاحب العمل من حساب نطاق المنشأة ورصيد الاستقطاب وكيفية تحسينه وبناء خططه المستقبلية في عملية التوظيف
+</p>
     </div>
 
         <div class=" items-center gap-5 min-w-[138px] md:gap-8 max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white p-5	 " style="
@@ -530,13 +536,14 @@
     font-style: normal;
     font-weight: 400;
     line-height: 14px; /* 175% */
-    ">تقرير يوضح نطاق المنشأة الحالي والمؤثرات عليه وكيفية تحسينه بأسهل الحلول الممكنة وأقل التكاليف.</p>
+    ">
+هو تقرير يوضح لصاحب العمل الموظفين المسجلين والغير مسجلين في سجلات وزارة الموارد البشرية والتأمينات الاجتماعية...</p>
     </div>
 
         <div class=" items-center min-w-[138px] md:gap-8 max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white 	 " style="
         box-shadow: 2px 6px 40px 0px rgba(143, 143, 143, 0.15);
     ;">
-    <div class="flex w-full justify-end"><h4 class="flex pt-2 w-5/12	justify-center rounded-tl-[20px] bg-[#DE0F0F] h-7 text-white text-xs">قريباً</h4></div>
+    <div class="flex w-full justify-end"><h4 class="flex pt-2 md:pt-0 w-5/12 md:w[37%] justify-center md:items-center rounded-tl-[20px] bg-[#DE0F0F] h-7 md:h-11	 text-white text-xs md:text-xl">قريباً</h4></div>
     <div class="flex  mb-5 mr-3	mr-6	">
         <div>
 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none">
@@ -576,35 +583,39 @@
     line-height: 14px; /* 175% */
         margin-right: 20px;
     margin-left: 20px;
-    ">تقرير يوضح نطاق المنشأة الحالي والمؤثرات عليه وكيفية تحسينه بأسهل الحلول الممكنة وأقل التكاليف.</p>
+    ">
+هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى،
+</p>
     </div>
 
-        <div class=" items-center gap-5 min-w-[138px] max-w-[251px] h-[153px] md: h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white p-5	 " style="
-        box-shadow: 2px 6px 40px 0px rgba(143, 143, 143, 0.15)">
-    <div class="flex gap-1.5">
+        <div class=" items-center min-w-[138px] md:gap-8 max-w-[251px] h-[153px] md:h-[192px] rounded-[20px] border border-[#E8E8E8] bg-white 	 " style="
+        box-shadow: 2px 6px 40px 0px rgba(143, 143, 143, 0.15);
+    ;">
+    <div class="flex w-full justify-end"><h4 class="flex pt-2 md:pt-0 w-5/12 md:w[37%] justify-center md:items-center rounded-tl-[20px] bg-[#DE0F0F] h-7 md:h-11	 text-white text-xs md:text-xl">قريباً</h4></div>
+    <div class="flex  mb-5 mr-3	mr-6	">
         <div>
-<svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none">
-  <g clip-path="url(#clip0_1371_21022)">
-    <mask id="mask0_1371_21022" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="0" width="20" height="21">
-      <path d="M0 0.500002H20V20.5H0V0.500002Z" fill="white"/>
+<svg xmlns="http://www.w3.org/2000/svg" width="33" height="32" viewBox="0 0 33 32" fill="none">
+  <g clip-path="url(#clip0_1323_15065)">
+    <mask id="mask0_1323_15065" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="0" width="33" height="32">
+      <path d="M0.5 3.8147e-06H32.5V32H0.5V3.8147e-06Z" fill="white"/>
     </mask>
-    <g mask="url(#mask0_1371_21022)">
-      <path d="M7.26434 10.7891C7.26434 9.85488 6.5084 9.09895 5.57422 9.09895" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M17.2695 10.7891C17.2695 9.85488 18.0255 9.09895 18.9596 9.09895" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M17.2695 3.64973C17.2695 4.58391 18.0255 5.33984 18.9596 5.33984" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M12.2656 3.62434H18.3506C18.7006 3.62434 18.9844 3.90809 18.9844 4.25813V10.1826C18.9844 10.5327 18.7006 10.8164 18.3506 10.8164H14.0234" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M10.5078 10.8164H6.18066C5.83066 10.8164 5.54688 10.5327 5.54688 10.1826V6.79066" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M10.5854 6.33551C10.9043 5.73285 11.5377 5.32223 12.2671 5.32223C13.3171 5.32223 14.1684 6.17352 14.1684 7.22359C14.1684 8.27371 13.3171 9.125 12.2671 9.125C11.4617 9.125 10.7732 8.62426 10.4961 7.91711" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M3.82812 1.51438H9.49242C10.0487 1.51438 10.5893 1.6986 11.0298 2.03829L13.0859 3.62376H8.83824C8.39039 3.62376 8.02734 3.9868 8.02734 4.43466C8.02734 4.72969 8.18762 5.00145 8.44578 5.14423L10.4555 6.25571C10.8721 6.48614 11.0574 6.98692 10.891 7.43305C10.7292 7.86673 10.2814 8.12356 9.82547 8.0443L8.41441 7.79895C7.10027 7.57044 5.85371 7.05153 4.76562 6.28001H3.82812" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M3.82812 7.14062H0.390625V0.890626H3.82812V7.14062Z" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M16.1673 19.6406H8.51459C7.16115 19.6406 5.86315 19.103 4.90612 18.1459L2.78397 16.0238C2.40408 15.6439 2.40553 15.0275 2.78721 14.6494C3.16639 14.2737 3.77791 14.2752 4.1553 14.6527L6.0542 16.5521C6.69061 17.1887 7.55381 17.5463 8.45393 17.5463H10.5641" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M12.8729 17.5469H8.6193C8.08527 17.5469 7.65234 17.1139 7.65234 16.5799C7.65234 16.0459 8.08527 15.6129 8.6193 15.6129H11.0856L11.5958 15.0073C12.2306 14.2538 13.1657 13.8189 14.151 13.8189C14.8559 13.8189 15.5427 14.0418 16.1132 14.4558L16.17 14.497" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M19.6094 20.1094H16.1719V13.8594H19.6094V20.1094Z" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+    <g mask="url(#mask0_1323_15065)">
+      <path d="M12.1212 16.4648C12.1212 14.9702 10.9117 13.7607 9.41699 13.7607" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M28.1289 16.4648C28.1289 14.9702 29.3384 13.7607 30.8331 13.7607" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M28.1289 5.04191C28.1289 6.53659 29.3384 7.74609 30.8331 7.74609" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M20.125 5.0005H29.8609C30.421 5.0005 30.875 5.4545 30.875 6.01456V15.4937C30.875 16.0538 30.421 16.5078 29.8609 16.5078H22.9375" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M17.3125 16.5078H10.3891C9.82906 16.5078 9.375 16.0538 9.375 15.4938V10.0666" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M17.4339 9.33564C17.9442 8.37139 18.9576 7.71439 20.1246 7.71439C21.8047 7.71439 23.1668 9.07645 23.1668 10.7566C23.1668 12.4368 21.8047 13.7988 20.1246 13.7988C18.836 13.7988 17.7345 12.9976 17.291 11.8662" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M6.625 1.62496H15.6879C16.5779 1.62496 17.4429 1.91971 18.1477 2.46321L21.4375 4.99996H14.6412C13.9246 4.99996 13.3438 5.58084 13.3438 6.2974C13.3438 6.76946 13.6002 7.20428 14.0132 7.43271L17.2288 9.21109C17.8954 9.57978 18.1918 10.381 17.9256 11.0948C17.6668 11.7887 16.9503 12.1997 16.2207 12.0728L13.9631 11.6803C11.8604 11.3147 9.86594 10.4844 8.125 9.24996H6.625" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M6.625 10.625H1.125V0.625001H6.625V10.625Z" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M26.3707 30.625H14.1263C11.9608 30.625 9.88397 29.7648 8.35272 28.2335L4.95728 24.8381C4.34947 24.2303 4.35178 23.244 4.96247 22.639C5.56915 22.0379 6.54759 22.0403 7.1514 22.6443L10.1897 25.6834C11.2079 26.7019 12.589 27.2741 14.0292 27.2741H17.4055" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M21.0951 27.2734H14.2893C13.4349 27.2734 12.7422 26.5808 12.7422 25.7263C12.7422 24.8718 13.4349 24.1791 14.2893 24.1791H18.2354L19.0517 23.2102C20.0674 22.0045 21.5635 21.3086 23.14 21.3086C24.2678 21.3086 25.3667 21.6653 26.2796 22.3278L26.3704 22.3937" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M31.875 31.375H26.375V21.375H31.875V31.375Z" stroke="#25A0D5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
     </g>
   </g>
   <defs>
-    <clipPath id="clip0_1371_21022">
-      <rect width="20" height="20" fill="white" transform="translate(0 0.5)"/>
+    <clipPath id="clip0_1323_15065">
+      <rect width="32" height="32" fill="white" transform="translate(0.5)"/>
     </clipPath>
   </defs>
 </svg>
@@ -617,8 +628,8 @@
     font-size: 10px;
     font-style: normal;
     font-weight: 400;
-    line-height: 20px; /* 200% */">                تنبيهات حالة دعم برامج صندوق الموارد البشرية
-    </div>
+    line-height: 20px; /* 200% */">
+تنبيهات حالة دعم برامج صندوق الموارد البشرية    </div>
     </div>
     <p style="
     color: #707070;
@@ -629,7 +640,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 14px; /* 175% */
-    ">تقرير يوضح نطاق المنشأة الحالي والمؤثرات عليه وكيفية تحسينه بأسهل الحلول الممكنة وأقل التكاليف.</p>
+        margin-right: 20px;
+    margin-left: 20px;
+    ">
+هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى،</p>
     </div>
 
 </div>
